# fpcode

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.ninja  fpcode.py  fpcodex.py  main-termux.c  main.c  main.h  main_termux.c
app/: CMakeLists.txt  app.c  app.h  clipboard.c  clipboard.h  convert.c  convert.h  main-cb.c  main_cb.c
app-termux/: CMakeLists.txt  app-termux.c  app-termux.h  app_termux.c
app_termux/: CMakeLists.txt  app_termux.c  app_termux.h
cJSON/: CMakeLists.txt  cJSON.c  cJSON.h
fp/: CMakeLists.txt  file-json.c  file-json.h  file-xml.c  file-xml.h  file.c  file.h  file_json.c  file_json.h  file_xml.c  file_xml.h  fp-crypt.c  fp-crypt.h  fp-json.c  fp-json.h  fp-xml.c  fp-xml.h  fp.c  fp.h  fp_crypt.c  fp_crypt.h  fp_json.c  fp_json.h  fp_xml.c  fp_xml.h
fpcode/: CMakeLists.txt  MD5.c  MD5.h  fpcode-private.c  fpcode-private.h  fpcode.c  fpcode.h  fpcode_x.c  fpcodex.c
mxml/: CMakeLists.txt  cmake-check.cmake  config.h.in  mxml-attr.c  mxml-entity.c  mxml-file.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-private.c  mxml-private.h  mxml-search.c  mxml-set.c  mxml-string.c  mxml.h
tapi/: tapi.c  tapi.h  termux_api.c  termux_api.h
termux-api/: CMakeLists.txt  termux-api.c  termux-api.h  termux-tapi.c  termux-tapi.h
